# cellularAutomata

./: Cargo.toml  pixi.toml
src/: main.rs
src/domain/: material.rs  mod.rs  particle.rs  render.rs  vec2.rs
src/gpu/: compute.rs  compute.wgsl  shader.wgsl
src/grid/: grid.rs  mod.rs  occupancy.rs
src/usecase/: collision.rs  update.rs
src/utils/: colors.rs
