[package]
name = "cellularAutomata"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.5"
minifb = "0.25"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
wgpu = "0.20"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures-intrusive = "0.5"
